# reticulum-proof-of-concept

./: Cargo.toml
crates/chatter-app/: Cargo.toml
crates/chatter-app/src/: chatter.rs  lib.rs  main.rs  types.rs
crates/tcp-server/: Cargo.toml
crates/tcp-server/src/: main.rs
src/: chatter.rs  lib.rs  main.rs  types.rs
