
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
reticulum = { git = "ssh://git@github.com/mattyg/Reticulum-rs.git", branch = "main" }
#reticulum = { path = "../Reticulum-rs" }
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
tokio = "1.44.0"

log = "0.4.26"
env_logger = "0.10"
