[package]
name = "chatter-app"
version = "0.1.0"
edition = "2024"

[dependencies]
reticulum = { workspace = true }
anyhow = { workspace = true }
rustyline = "15.0.0"
tokio = { workspace = true }
clap = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3.0"

# Logging
log = "0.4.26"
env_logger = "0.10"
